--- a/设计模式/解析-设计模式.md
+++ b/设计模式/解析-设计模式.md
@@ -105,6 +105,11 @@ MVVM相比MVC在代码编写之前需要有更清晰的模式思路。
 针,可以减少框架复杂度和耦合度。另外一点，代理可以理解为java中的回调监听机制的一种类
 似。
 
+#### 抽象工厂
+
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190729172906.png)
+
 ### 策略模式
 
 7.策略模式:把一些独立的算法单独封装起来，如我以前有个车管的app里面根据北斗定位步标
@@ -276,8 +281,6 @@ Product* Factory::createProduct(string proname){
 * 简单工厂模式的要点在于：当你需要什么，只需要传入一个正确的参数，就可以获取你所需要的对象，而无须知道其创建细节。
 * 简单工厂模式最大的优点在于实现对象的创建和对象的使用分离，将对象的创建交给专门的工厂类负责，但是其最大的缺点在于工厂类不够灵活，增加新的具体产品需要修改工厂类的判断逻辑代码，而且产品较多时，工厂方法代码将会非常复杂。
 * 简单工厂模式适用情况包括：工厂类负责创建的对象比较少；客户端只知道传入工厂类的参数，对于如何创建对象不关心。
-
-
 
 
 ### 1.5 单例模式
@@ -526,6 +529,8 @@ HCDPlayer *foreignCenter = [[HCDTranslator alloc]initWithName:@"姚明"];
     * 一个对象适配器可以把多个不同的适配者适配到同一个目标，也就是说，同一个适配器可以把适配者类和它的子类都适配到目标接口。
 
 #### 适配器缺点
+
+* 再次提醒一点，项目一定要遵守依赖倒置原则和里氏替换原则，否则即使在适合使用适配器的场合下，也会带来非常大的改造。
 
 * 类适配器模式的缺点如下：
     * 对于Java、C#等不支持多重继承的语言，一次最多只能适配一个适配者类，而且目标抽象类只能为抽象类，不能为具体类，其使用有一定的局限性，不能将一个适配者类和它的子类都适配到目标接口。
@@ -837,6 +842,9 @@ MVC模式是一种架构模式，它包含三个角色：模型(Model)，视图(
 * 在软件系统中，有许多算法可以实现某一功能，如查找、排序等，一种常用的方法是硬编码(Hard Coding)在一个类中，如需要提供多种查找算法，可以将这些算法写到一个类中，在该类中提供多个方法，每一个方法对应一个具体的查找算法；当然也可以将这些查找算法封装在一个统一的方法中，通过if…else…等条件判断语句来进行选择。这两种实现方法我们都可以称之为硬编码，如果需要增加一种新的查找算法，需要修改封装算法类的源代码；更换查找算法，也需要修改客户端调用代码。在这个算法类中封装了大量查找算法，该类代码将较复杂，维护较为困难。
 * 除了提供专门的查找算法类之外，还可以在客户端程序中直接包含算法代码，这种做法更不可取，将导致客户端程序庞大而且难以维护，如果存在大量可供选择的算法时问题将变得更加严重。
 * 为了解决这些问题，可以定义一些独立的类来封装不同的算法，每一个类封装一个具体的算法，在这里，每一个封装算法的类我们都可以称之为策略(Strategy)，为了保证这些策略的一致性，一般会用一个抽象的策略类来做算法的定义，而具体每种算法则对应于一个具体策略类。
+
+[iOS设计模式（5）策略模式 - 简书](https://www.jianshu.com/p/014df9e21c35)
+
 
 ####  模式定义
 
