feat(组件化)：更新组件化的意义

--- a/设计模式/解析-组件化架构.md
+++ b/设计模式/解析-组件化架构.md
@@ -1,5 +1,13 @@
 # 组件化架构
 
+
+## 意义
+
+随着工程一步步变大，组件化本质上是为了解决代码模块耦合带来的各种问题：
+* 模块测试，各模块不独立，逻辑耦合，独立测试成本和耦合成本成正比
+* 工程编译，编译成本和耦合成本成正比，可能出现编译报错
+* 设计架构拓展性，代码的健壮性，边界不清晰，导致难以拓展，本质上是技术债
+
 ## 组件化Demo
 
 CTMediator 方式
