feat(组件化)：更新组件化的意义

--- a/设计模式/解析-组件化架构.md
+++ b/设计模式/解析-组件化架构.md
@@ -7,6 +7,7 @@
 * 模块测试，各模块不独立，逻辑耦合，独立测试成本和耦合成本成正比
 * 工程编译，编译成本和耦合成本成正比，可能出现编译报错
 * 设计架构拓展性，代码的健壮性，边界不清晰，导致难以拓展，本质上是技术债
+* 组件化是有成本的，就像一个工具，它可以提高解决一个需求的效率，但是需要去学习如何使用，所以找到平衡成本和收益的点，最大化效率和收益。但是，对于整个趋势来说，前期业务少的时候，做好模块的规范和解耦，组件化是水到渠成的事情。
 
 ## 组件化Demo
 
