feat(UIKit): 更新UIStackView和Swift

--- a/设计模式/解析-设计模式.md
+++ b/设计模式/解析-设计模式.md
@@ -552,11 +552,11 @@ HCDPlayer *foreignCenter = [[HCDTranslator alloc]initWithName:@"姚明"];
 *
 对于有两个变化维度（即两个变化的原因）的系统，采用方案二来进行设计系统中类的个数更少，且系统扩展更为方便。**设计方案二即是桥接模式的应用。桥接模式将继承关系转换为关联关系，从而降低了类与类之间的耦合，减少了代码编写量**。
 
-##### 模式定义
+#### 模式定义
 
 桥接模式(Bridge Pattern)：将抽象部分与它的实现部分分离，使它们都可以独立地变化。它是一种对象结构型模式，又称为柄体(Handle and Body)模式或接口(Interface)模式。
 
-##### 模式结构
+#### 模式结构
 
 桥接模式包含如下角色：
 
@@ -586,6 +586,9 @@ HCDPlayer *foreignCenter = [[HCDTranslator alloc]initWithName:@"姚明"];
 
 
 ### 2.3 装饰模式
+
+* Extention
+* Delegate
 
 #### 模式动机
 
