feat(ref): update 相关参考

--- a/1-iOSCocoa💎/内存管理/解析-内存管理机制.md
+++ b/1-iOSCocoa💎/内存管理/解析-内存管理机制.md
@@ -1,7 +1,7 @@
 ## 内存管理
 
 [深入研究 Block 用 weakSelf、strongSelf、@weakify、@strongify 解决循环引用](https://halfrost.com/ios_block_retain_circle/)
-
+[Swift 对象内存模型探究（一）](https://mp.weixin.qq.com/s/zIkB9KnAt1YPWGOOwyqY3Q)
 
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190805142038.png)
 
