feat(design): 更新设计模式，add snapkit解析

--- a/设计模式/解析-代码重构.md
+++ b/设计模式/解析-代码重构.md
@@ -1,5 +1,8 @@
 ## 解析-代码重构
 
+* 减少Singleton，逻辑收敛
+* DI + Protocol 简化单元测试
+
 *   *   重构的原因
         *   随着业务需求的不断加入，代码随着时间的推移变得越来越糟。
             “如果尿布臭了，就换掉它”。 
