chore(design): deep refactor design pattern six rules, create UML graph learning doc.

--- a/设计模式/解析-设计六大原则.md
+++ b/设计模式/解析-设计六大原则.md
@@ -2,14 +2,15 @@
 # 解析-设计六大原则
 
 
-[面向对象设计的六大设计原则（附 Demo & UML类图） - 掘金](https://juejin.im/post/5b9526c1e51d450e69731dc2)
+### 推荐阅读：
 
-
-推荐阅读：[创建型模式 — Graphic Design Patterns](https://design-patterns.readthedocs.io/zh_CN/latest/creational_patterns/creational.html)
+* [面向对象设计的六大设计原则（附 Demo & UML类图） - 掘金](https://juejin.im/post/5b9526c1e51d450e69731dc2)
+* [创建型模式 — Graphic Design Patterns](https://design-patterns.readthedocs.io/zh_CN/latest/creational_patterns/creational.html)
 
 
 ## 原则一：开闭原则（Open Close Principle）
-定义
+
+### 定义
 
 Software entities (classes, modules, functions, etc.) should be open for extension, but closed for modification.
 
@@ -19,12 +20,20 @@ Software entities (classes, modules, functions, etc.) should be open for extensi
 用抽象构建框架，用实现扩展细节。
 不以改动原有类的方式来实现新需求，而是应该以实现事先抽象出来的接口（或具体类继承抽象类）的方式来实现。
 
-优点
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20200223120134.png)
+
+### 优点
+
 实践开闭原则的优点在于可以在不改动原有代码的前提下给程序扩展功能。增加了程序的可扩展性，同时也降低了程序的维护成本。
 代码讲解
 
 
 ## 原则二：单一职责原则（Single Responsibility Principle）
+
+### 定义
+
+> A class should have a single responsibility, where a responsibility is nothing but a reason to change.
+> 即：一个类只允许有一个职责，即只有一个导致该类变更的原因。
 
 * 类职责的变化往往就是导致类变化的原因：也就是说如果一个类具有多种职责，就会有多种导致这个类变化的原因，从而导致这个类的维护变得困难。
 
@@ -32,427 +41,98 @@ Software entities (classes, modules, functions, etc.) should be open for extensi
 
 * 不仅仅是类，函数（方法）也要遵循单一职责原则，即：一个函数（方法）只做一件事情。如果发现一个函数（方法）里面有不同的任务，则需要将不同的任务以另一个函数（方法）的形式分离出去。
 
-
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20200223120446.png)
 
 ## 原则三：依赖倒置原则（Dependency Inversion Principle）
 
+### 定义
 
+> Depend upon Abstractions. Do not depend upon concretions.
+> Abstractions should not depend upon details. Details should depend upon abstractions
+> High-level modules should not depend on low-level modules. Both should depend on abstractions.
+
+即：
 
 * 依赖抽象，而不是依赖实现。
 * 抽象不应该依赖细节；细节应该依赖抽象。
 * 高层模块不能依赖低层模块，二者都应该依赖抽象。
 
 
-定义解读
+### 定义解读
 
-* 针对接口编程，而不是针对实现编程。
+* **针对接口编程，而不是针对实现编程**。
 * **尽量不要从具体的类派生，而是以继承抽象类或实现接口来实现**。
 * 关于高层模块与低层模块的划分可以按照决策能力的高低进行划分。业务层自然就处于上层模块，逻辑层和数据层自然就归类为底层。
 
+### 优点
+
+通过抽象来搭建框架，建立类和类的关联，以减少类间的耦合性。而且以抽象搭建的系统要比以具体实现搭建的系统更加稳定，扩展性更高，同时也便于维护。
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20200223120930.png)
 
 ## 原则四：接口分离原则（Interface Segregation Principle）
-定义
-Many client specific interfaces are better than one general purpose interface.
 
+### 定义
 
-即：多个特定的客户端接口要好于一个通用性的总接口。
-定义解读
+> Many client specific interfaces are better than one general purpose interface.
+即： 多个特定的客户端接口要好于一个通用性的总接口。
 
-客户端不应该依赖它不需要实现的接口。
-不建立庞大臃肿的接口，应尽量细化接口，接口中的方法应该尽量少。
+### 定义解读
 
-需要注意的是：接口的粒度也不能太小。如果过小，则会造成接口数量过多，使设计复杂化。
+* 客户端不应该依赖它不需要实现的接口。
+* 不建立庞大臃肿的接口，应尽量细化接口，接口中的方法应该尽量少。
+* 需要注意的是：**接口的粒度也不能太小。如果过小，则会造成接口数量过多，使设计复杂化**。
 
-优点
+### 优点
 
 避免同一个接口里面包含不同类职责的方法，接口责任划分更加明确，符合高内聚低耦合的思想。
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20200223121311.png)
 
 
 ## 原则五：迪米特法则（Law of Demeter）
 
-定义
+### 定义
 
-You only ask for objects which you directly need.
+> You only ask for objects which you directly need.
+> 即：一个对象应该对尽可能少的对象有接触，也就是只接触那些真正需要接触的对象。
 
-即：一个对象应该对尽可能少的对象有接触，也就是只接触那些真正需要接触的对象。
-定义解读
+### 定义解读
 
 迪米特法则也叫做最少知道原则（Least Know Principle）， 一个类应该只和它的成员变量，方法的输入，返回参数中的类作交流，而不应该引入其他的类（间接交流）。
 
-优点
+### 优点
+
 实践迪米特法则可以良好地降低类与类之间的耦合，减少类与类之间的关联程度，让类与类之间的协作更加直接。
 
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20200223121519.png)
 
 ## 原则六：里氏替换原则（Liskov Substitution Principle）
 
-定义
+### 定义
 
-In a computer program, if S is a subtype of T, then objects of type T may be replaced with objects of type S (i.e. an object of type T may be substituted with any object of a subtype S) without altering any of the desirable properties of the program (correctness, task performed, etc.)
+> In a computer program, if S is a subtype of T, then objects of type T may be replaced with objects of type S (i.e. an object of type T may be substituted with any object of a subtype S) without altering any of the desirable properties of the program (correctness, task performed, etc.)
+> 即：所有引用基类的地方必须能透明地使用其子类的对象，也就是说子类对象可以替换其父类对象，而程序执行效果不变。
 
-即：所有引用基类的地方必须能透明地使用其子类的对象，也就是说子类对象可以替换其父类对象，而程序执行效果不变。
-定义的解读
+### 定义的解读
+
 在继承体系中，子类中可以增加自己特有的方法，也可以实现父类的抽象方法，但是不能重写父类的非抽象方法，否则该继承关系就不是一个正确的继承关系。
-优点
+
+### 优点
+
 可以检验继承使用的正确性，约束继承在使用上的泛滥。
 
 
-#### 不好的设计
+### 举例
 
 首先声明一个长方形类，然后让正方形类继承于长方形。
 
-长方形类：
-
-```
-//================== Rectangle.h ==================
-
-@interface Rectangle : NSObject
-{
-@protected double _width;
-@protected double _height;
-}
-
-//设置宽高
-- (void)setWidth:(double)width;
-- (void)setHeight:(double)height;
-
-//获取宽高
-- (double)width;
-- (double)height;
-
-//获取面积
-- (double)getArea;
-
-@end
-
-//================== Rectangle.m ==================
-
-@implementation Rectangle
-
-- (void)setWidth:(double)width{
-    _width = width;
-}
-
-- (void)setHeight:(double)height{
-    _height = height;
-}
-
-- (double)width{
-    return _width;
-}
-
-- (double)height{
-    return _height;
-}
-
-- (double)getArea{
-    return _width * _height;
-}
-
-@end
-复制代码
-```
-
-正方形类：
-
-```
-//================== Square.h ==================
-
-@interface Square : Rectangle
-@end
-
-//================== Square.m ==================
-
-@implementation Square
-
-- (void)setWidth:(double)width{
-
-    _width = width;
-    _height = width;
-}
-
-- (void)setHeight:(double)height{
-
-    _width = height;
-    _height = height;
-}
-
-@end
-复制代码
-```
-
-可以看到，正方形类继承了长方形类以后，为了保证边长永远是相等的，特意在两个set方法里面强制将宽和高都设置为传入的值，也就是重写了父类`Rectangle`的两个set方法。但是里氏替换原则里规定，子类不能重写父类的方法，所以上面的设计是违反该原则的。
-
-而且里氏替换原则原则里面所属：子类对象能够替换父类对象，而程序执行效果不变。我们通过一个例子来看一下上面的设计是否符合：
-
-在客户端类写一个方法：传入一个`Rectangle`类型并返回它的面积：
-
-```
-- (double)calculateAreaOfRect:(Rectangle *)rect{
-    return rect.getArea;
-}
-复制代码
-```
-
-我们先用`Rectangle`对象试一下：
-
-```
-Rectangle *rect = [[Rectangle alloc] init];
-rect.width = 10;
-rect.height = 20;
-
-double rectArea = [self calculateAreaOfRect:rect];//output:200
-复制代码
-```
-
-长宽分别设置为10，20以后，结果输出200，没有问题。
-
-现在我们使用`Rectange`的子类`Square`的对象替换原来的`Rectange`对象，看一下结果如何：
-
-```
-Square *square = [[Square alloc] init];
-square.width = 10;
-square.height = 20;
-
-double squareArea = [self calculateAreaOfRect:square];//output:400
-复制代码
-```
-
-结果输出为400，结果不一致，再次说明了上述设计不符合里氏替换原则，因为子类的对象`square`替换父类的对象`rect`以后，程序执行的结果变了。
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20200223121908.png)
 
 不符合里氏替换原则就说明该继承关系不是正确的继承关系，也就是说正方形类不能继承于长方形类，程序需要重新设计。
 
-我们现在看一下比较好的设计。
-
-#### 较好的设计
-
 既然正方形不能继承于长方形，那么是否可以让二者都继承于其他的父类呢？答案是可以的。
 
-既然要继承于其他的父类，它们这个父类肯定具备这两种形状共同的特点：有4个边。那么我们就定义一个四边形的类：`Quadrangle`。
+既然要继承于其他的父类，它们这个父类肯定具备这两种形状共同的特点：有4个边。那么我们就定义一个四边形的类：Quadrangle。
 
-```
-//================== Quadrangle.h ==================
-
-@interface Quadrangle : NSObject
-{
-@protected double _width;
-@protected double _height;
-}
-
-- (void)setWidth:(double)width;
-- (void)setHeight:(double)height;
-
-- (double)width;
-- (double)height;
-
-- (double)getArea;
-@end
-复制代码
-```
-
-接着，让`Rectangle`类和`Square`类继承于它：
-
-`Rectangle`类：
-
-```objc
-//================== Rectangle.h ==================
-
-#import "Quadrangle.h"
-
-@interface Rectangle : Quadrangle
-
-@end
-
-//================== Rectangle.m ==================
-
-@implementation Rectangle
-
-- (void)setWidth:(double)width{
-    _width = width;
-}
-
-- (void)setHeight:(double)height{
-    _height = height;
-}
-
-- (double)width{
-    return _width;
-}
-
-- (double)height{
-    return _height;
-}
-
-- (double)getArea{
-    return _width * _height;
-}
-
-@end
-复制代码
-```
-
-`Square`类：
-
-```objc
-//================== Square.h ==================
-
-@interface Square : Quadrangle
-{
-    @protected double _sideLength;
-}
-
--(void)setSideLength:(double)sideLength;
-
--(double)sideLength;
-
-@end
-
-//================== Square.m ==================
-
-@implementation Square
-
--(void)setSideLength:(double)sideLength{    
-    _sideLength = sideLength;
-}
-
--(double)sideLength{
-    return _sideLength;
-}
-
-- (void)setWidth:(double)width{
-    _sideLength = width;
-}
-
-- (void)setHeight:(double)height{
-    _sideLength = height;
-}
-
-- (double)width{
-    return _sideLength;
-}
-
-- (double)height{
-    return _sideLength;
-}
-
-- (double)getArea{
-    return _sideLength * _sideLength;
-}
-
-@end
-复制代码
-```
-
-我们可以看到，`Rectange`和`Square`类都以自己的方式实现了父类`Quadrangle`的公共方法。而且由于`Square`的特殊性，它也声明了自己独有的成员变量`_sideLength`以及其对应的公共方法。
-
-> 注意，这里`Rectange`和`Square`并不是重写了其父类的公共方法，而是实现了其抽象方法。
-
-
-
-# 看懂UML类图和时序图[](https://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html#uml "永久链接至标题")
-
-这里不会将UML的各种元素都提到，我只想讲讲类图中各个类之间的关系； 能看懂类图中各个类之间的线条、箭头代表什么意思后，也就足够应对 日常的工作和交流； 同时，我们应该能将类图所表达的含义和最终的代码对应起来； 有了这些知识，看后面章节的设计模式结构图就没有什么问题了；
-
-本章所有图形使用Enterprise Architect 9.2来画,所有示例详见根目录下的design_patterns.EAP
-
-## 从一个示例开始[](https://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html#id1 "永久链接至标题")
-
-请看以下这个类图，类之间的关系是我们需要关注的：
-
-![_images/uml_class_struct.jpg](https://design-patterns.readthedocs.io/zh_CN/latest/_images/uml_class_struct.jpg)
-
-*   车的类图结构为<<abstract>>，表示车是一个抽象类；
-*   它有两个继承类：小汽车和自行车；它们之间的关系为实现关系，使用带空心箭头的虚线表示；
-*   小汽车为与SUV之间也是继承关系，它们之间的关系为泛化关系，使用带空心箭头的实线表示；
-*   小汽车与发动机之间是组合关系，使用带实心箭头的实线表示；
-*   学生与班级之间是聚合关系，使用带空心箭头的实线表示；
-*   学生与身份证之间为关联关系，使用一根实线表示；
-*   学生上学需要用到自行车，与自行车是一种依赖关系，使用带箭头的虚线表示；
-
-下面我们将介绍这六种关系；
-
-* * *
-
-## 类之间的关系[](https://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html#id2 "永久链接至标题")
-
-### 泛化关系(generalization)[](https://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html#generalization "永久链接至标题")
-
-类的继承结构表现在UML中为：泛化(generalize)与实现(realize)：
-
-继承关系为 is-a的关系；两个对象之间如果可以用 is-a 来表示，就是继承关系：（..是..)
-
-eg：自行车是车、猫是动物
-
-泛化关系用一条带空心箭头的直接表示；如下图表示（A继承自B）；
-
-![_images/uml_generalization.jpg](https://design-patterns.readthedocs.io/zh_CN/latest/_images/uml_generalization.jpg)
-
-eg：汽车在现实中有实现，可用汽车定义具体的对象；汽车与SUV之间为泛化关系；
-
-![_images/uml_generalize.jpg](https://design-patterns.readthedocs.io/zh_CN/latest/_images/uml_generalize.jpg)
-
-注：最终代码中，泛化关系表现为继承非抽象类；
-
-### 实现关系(realize)[](https://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html#realize "永久链接至标题")
-
-实现关系用一条带空心箭头的虚线表示；
-
-eg：”车”为一个抽象概念，在现实中并无法直接用来定义对象；只有指明具体的子类(汽车还是自行车)，才 可以用来定义对象（”车”这个类在C++中用抽象类表示，在JAVA中有接口这个概念，更容易理解）
-
-![_images/uml_realize.jpg](https://design-patterns.readthedocs.io/zh_CN/latest/_images/uml_realize.jpg)
-
-注：最终代码中，实现关系表现为继承抽象类；
-
-### 聚合关系(aggregation)[](https://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html#aggregation "永久链接至标题")
-
-聚合关系用一条带空心菱形箭头的直线表示，如下图表示A聚合到B上，或者说B由A组成；
-
-![_images/uml_aggregation.jpg](https://design-patterns.readthedocs.io/zh_CN/latest/_images/uml_aggregation.jpg)
-
-聚合关系用于表示实体对象之间的关系，表示整体由部分构成的语义；例如一个部门由多个员工组成；
-
-与组合关系不同的是，整体和部分不是强依赖的，即使整体不存在了，部分仍然存在；例如， 部门撤销了，人员不会消失，他们依然存在；
-
-### 组合关系(composition)[](https://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html#composition "永久链接至标题")
-
-组合关系用一条带实心菱形箭头直线表示，如下图表示A组成B，或者B由A组成；
-
-![_images/uml_composition.jpg](https://design-patterns.readthedocs.io/zh_CN/latest/_images/uml_composition.jpg)
-
-与聚合关系一样，组合关系同样表示整体由部分构成的语义；比如公司由多个部门组成；
-
-但组合关系是一种强依赖的特殊聚合关系，如果整体不存在了，则部分也不存在了；例如， 公司不存在了，部门也将不存在了；
-
-### 关联关系(association)[](https://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html#association "永久链接至标题")
-
-关联关系是用一条直线表示的；它描述不同类的对象之间的结构关系；它是一种静态关系， 通常与运行状态无关，一般由常识等因素决定的；它一般用来定义对象之间静态的、天然的结构； 所以，关联关系是一种“强关联”的关系；
-
-比如，乘车人和车票之间就是一种关联关系；学生和学校就是一种关联关系；
-
-关联关系默认不强调方向，表示对象间相互知道；如果特别强调方向，如下图，表示A知道B，但 B不知道A；
-
-![_images/uml_association.jpg](https://design-patterns.readthedocs.io/zh_CN/latest/_images/uml_association.jpg)
-
-注：在最终代码中，关联对象通常是以成员变量的形式实现的；
-
-### 依赖关系(dependency)[](https://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html#dependency "永久链接至标题")
-
-依赖关系是用一套带箭头的虚线表示的；如下图表示A依赖于B；他描述一个对象在运行期间会用到另一个对象的关系；
-
-![_images/uml_dependency.jpg](https://design-patterns.readthedocs.io/zh_CN/latest/_images/uml_dependency.jpg)
-
-与关联关系不同的是，它是一种临时性的关系，通常在运行期间产生，并且随着运行时的变化； 依赖关系也可能发生变化；
-
-显然，依赖也有方向，双向依赖是一种非常糟糕的结构，我们总是应该保持单向依赖，杜绝双向依赖的产生；
-
-注：在最终代码中，依赖关系体现为类构造方法及类方法的传入参数，箭头的指向为调用关系；依赖关系除了临时知道对方外，还是“使用”对方的方法和属性；
-
-
-
-
-## 建壮性
-
-一个软件可以正确地运行在不同环境下，则认为软件可移植性高，也可以叫，软件在不同平台下是健壮的。
-
-## 参考
-
-1. [看懂UML类图和时序图 — Graphic Design Patterns](https://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html)
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20200223121703.png)/Users/mac/My/GitRepo/DailyLearning/设计模式/解析-看懂UML类图和时序图.md
