feat(DesignPattern): update the Adapter Design pattern

--- a/设计模式/解析-设计模式.md
+++ b/设计模式/解析-设计模式.md
@@ -408,11 +408,110 @@ int objc_sync_exit(id obj)
 
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190729102702.png)
 
+
+第一种是通过继承来适配两个接口，这称为类适配器。C++中类适配器是通过多重继承实现的。在Java和OC这类没有多继承的语言中，可以通过实现接口或协议，同时继承父类来实现类适配。具体在OC中，首先需要有定义了客户端要是用的一套行为的协议，然后要用具体的适配器来实现这个协议。适配器类同时也要继承被适配者。
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20200321093429.png)
+
+Target指目标接口。 Adaptee指被适配者。 request意为请求。
+
+Adapter是一个Target类型，同时也是一个Adaptee类型。Adapter重载Target的request方法。但是Adapter没有重载Adaptee的specficRequest方法，而是在Adapter的request方法中的实现中，调用父类specficRequest方法。request方法在运行时向父类发送[super specficRequest]消息。super就是Adaptee，它的Adapter的request方法的作用域内，按自己的方式执行specficRequest方法。只有当Target是协议而不是类时，类适配器才能够用OC来实现。
+
+第二种称为对象适配器。与类适配器不同，对象适配器不继承被适配者，而是组合了一个对它的引用。实现为对象适配器时，它们之间的关系为：
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20200321093635.png)
+
+
+Target和Adapter之间的关系与类适配器相同，而Adapter与Adaptee之间的关系从“属于”变成了“包含”。这种关系下，Adapter需要保持一个对Adaptee的引用。在request方法中，Adapter发送[adaptee specficRequest]消息给引用adaptee，以间接访问它的行为，然后实现客户端请求的其余部分。由于Adapter与Adaptee之间是一种“包含”关系，用Adapter去适配Adaptee的子类也没什么问题。
+
+
+#### 类适配器
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20200321095215.png)
+
+```objc
+//Charger.h 普通充电器
+@interface Charger : NSObject
+- (void)charge;//普通充电
+@end
+
+//Charger.m
+@implementation Charger
+- (void)charge {
+    NSLog(@"充电中");
+}
+@end
+
+//LightningChargerAdapterProtocol.h 适配接口
+@protocol LightningChargerAdapterProtocol <NSObject>
+@required
+- (void)chargeWithLightning;//声明适配方法
+@end
+
+//LightningChargerAdapter.h  适配器，继承Charger，实现LightningChargerAdapterProtocol
+@interface LightningChargerAdapter : Charger <LightningChargerAdapterProtocol>
+@end
+
+//LightningChargerAdapter.m
+@implementation LightningChargerAdapter
+- (void)chargeWithLightning {
+    NSLog(@"使用Lightning");
+    [super charge];//调用父类的充电方法
+}
+@end
+
+//客户端调用
+LightningChargerAdapter *charger = [[LightningChargerAdapter alloc] init];
+[charger chargeWithLightning];
+```
+
+#### 对象适配器
+
+如果我们将MicroUSB接口的适配器只是作为充电器的一个组成部分，这样就实现了对象适配器。
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20200321095239.png)
+
+```objc
+//MicroUSBAdapterProtocol
+@protocol MicroUSBAdapterProtocol <NSObject>
+@required
+- (void)chargeWithMicroUSB;
+@end
+
+//MicroUSBAdapter.h
+@interface MicroUSBAdapter : NSObject
+- (void)chargeWithMicroUSB;
+@end
+
+//MicroUSBAdapter.m
+@interface MicroUSBAdapter() <MicroUSBAdapterProtocol>
+@property (nonatomic, strong) Charger *charger;//持有Charger属性
+@end
+
+@implementation MicroUSBAdapter
+- (void)chargeWithMicroUSB {
+    NSLog(@"使用MicroUSB");
+    self.charger = [[Charger alloc] init];
+    [self.charger charge];
+}
+@end
+```
+
+#### 类适配器与对象适配器的对比
+
+类适配器与对象适配器是实现适配器模式的不同方式，但是达成了同样的目的。
+
+显然，代理(Delegate)模式属于对象适配器。
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20200321095334.png)
+
+[iOS中的设计模式——适配器(Adapter)](http://ibloodline.com/articles/2016/09/20/Adapter.html)
+
 * 将一个类的接口转换成客户希望的另外一个接口。适配器模式使得原本由于接口不兼容而不能一起工作的那些类可以一起工作。
 * 在软件开发中采用类似于电源适配器的设计和编码技巧被称为适配器模式。
-* 通常情况下，客户端可以通过目标类的接口访问它所提供的服务。有时，现有的类可以满足客户类的功能需要，但是它所提供的接口不一定是客户类所期望的，这可能是因为现有类中方法名与目标类中定义的方法名不一致等原因所导致的。
+* 通常情况下，客户端可以通过目标类的接口访问它所提供的服务。**有时，现有的类可以满足客户类的功能需要，但是它所提供的接口不一定是客户类所期望的，这可能是因为现有类中方法名与目标类中定义的方法名不一致等原因所导致的。**
 * 在这种情况下，现有的接口需要转化为客户类期望的接口，这样保证了对现有类的重用。如果不进行这样的转化，客户类就不能利用现有类所提供的功能，适配器模式可以完成这样的转化。
-* 在适配器模式中可以定义一个包装类，包装不兼容接口的对象，这个包装类指的就是适配器(Adapter)，它所包装的对象就是适配者(Adaptee)，即被适配的类。
+* 在适配器模式中可以**定义一个包装类，包装不兼容接口的对象，这个包装类指的就是适配器(Adapter)，它所包装的对象就是适配者(Adaptee)，即被适配的类**。
 * 适配器提供客户类需要的接口，适配器的实现就是把客户类的请求转化为对适配者的相应接口的调用。也就是说：当客户类调用适配器的方法时，在适配器类的内部将调用适配者类的方法，而这个过程对客户类是透明的，客户类并不直接访问适配者类。因此，适配器可以使由于接口不兼容而不能交互的类可以一起工作。这就是适配器模式的模式动机。
 
 1. 面向对象的适配器
@@ -440,10 +539,10 @@ int objc_sync_exit(id obj)
 * Adaptee：适配者类
 * Client：客户类
 
-适配器模式的实现方式：类适配器和对象适配器。 
-1、类适配器：主要是通过继承来适配两个接口。主要是使用多重继承的方式，但是OC不支持多继承，只支持单继承，所以在iOS中我们使用继承和协议的方式来实现类的适配。 
-2、对象适配器：组合一个被适配类的引用，不是采用继承被适配的类的方式。
-、
+* 适配器模式的实现方式：类适配器和对象适配器。 
+1. 类适配器：**主要是通过继承来适配两个接口。主要是使用多重继承的方式**，但是OC不支持多继承，只支持单继承，所以在iOS中我们使用继承和协议的方式来实现类的适配。 
+2. 对象适配器：**关联一个被适配类的引用，不是采用继承被适配的类的方式**。
+
 对象适配器：
 
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190310115724.png)
@@ -457,10 +556,12 @@ int objc_sync_exit(id obj)
 
 * 显然，代理(Delegate)模式属于对象适配器。
 
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20200321092208.png)
+
 ```objc
 
-// 定义一个target类
-
+// 定义目标抽象类
 @interface HCDPlayer : NSObject
 @property(nonatomic,copy)NSString *name;
 -(void)attack;
@@ -468,16 +569,8 @@ int objc_sync_exit(id obj)
 -(instancetype)initWithName:(NSString *)name;
 @end
 
-// 一个需要适配的类Adaptee，和target类不一样的类
-
-@interface HCDForeignCenter : NSObject
-@property(nonatomic,copy)NSString *name;
--(void)foreignAttact;
--(void)foreignDefent;
--(instancetype)initWithName:(NSString *)name;
-@end
-
-@interface HCDForwards ()
+// 目标类
+@interface HCDForwards : HCDPlayer
 @end
 @implementation HCDForwards
 -(void)attack{
@@ -488,22 +581,32 @@ int objc_sync_exit(id obj)
 }
 @end
 
-// 继承target类的适配器，适配Adaptee类，转为target类
+// 一个需要适配的类Adaptee，适配者类，和target类不一样的类
+
+@interface HCDForeignCenter : NSObject
+@property(nonatomic,copy)NSString *name;
+-(void)foreignAttact;
+-(void)foreignDefent;
+-(instancetype)initWithName:(NSString *)name;
+@end
+
+// 适配器类，适配Adaptee类，转为target类
 
 @interface HCDTranslator ()
 @end
 @implementation HCDTranslator
--(instancetype)initWithName:(NSString *)name{
+-(instancetype)initWithForeigncenter:(HCDForeignCenter *)foreigncenter {
     self = [super init];
     if (self) {
-        _foreigncenter = [[HCDForeignCenter alloc]initWithName:name];
+        _foreigncenter = foreigncenter;
     }
     return self;
-}
+} 
 
 -(void)defense{
     [self.foreigncenter foreignDefent];
 }
+
 -(void)attack{
     [self.foreigncenter foreignAttact];
 }
@@ -513,10 +616,10 @@ int objc_sync_exit(id obj)
 HCDPlayer *forward = [[HCDForwards alloc]initWithName:@"maidi"];
 [forward attack];
 [forward defense];
-HCDPlayer *foreignCenter = [[HCDTranslator alloc]initWithName:@"姚明"];
-[foreignCenter attack];
-[foreignCenter defense];
-
+HCDForeignCenter *foreignCenter = [[HCDForeignCenter alloc] initWithName:@"姚明"];
+HCDPlayer *translator = [[HCDTranslator alloc] initWithForeigncenter:foreignCenter];
+[translator attack];
+[translator defense];
 ```
 
 #### 适配器优点
@@ -542,8 +645,11 @@ HCDPlayer *foreignCenter = [[HCDTranslator alloc]initWithName:@"姚明"];
 ### 2.2 桥接模式
 
 　　在项目开发中，我们会遇到这样的一种场景：某些类型由于自身的逻辑，往往具有两个或多个维度的变化，比如说大话设计模式书中所说的手机，它有两个变化的维度：一是手机的品牌，可能有三星、苹果等；二是手机上的软件，可能有QQ、微信等。如何应对这种“多维度的变化”？怎样利用面向对象的技术来使得该类型能够轻松的沿着多个方向进行变化，而又不引入额外的复杂度？这就是本章桥接模式所要解决的问题。
+
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190522194243.png)
+
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190522194332.png)
+
 [IOS设计模式浅析之桥接模式(Bridge) - Gof Lee - 博客园](https://www.cnblogs.com/eagle927183/p/3483890.html)
 
 设想如果要绘制矩形、圆形、椭圆、正方形，我们至少需要4个形状类，但是如果绘制的图形需要具有不同的颜色，如红色、绿色、蓝色等，此时至少有如下两种设计方案：
