--- a/设计模式/解析-设计六大原则.md
+++ b/设计模式/解析-设计六大原则.md
@@ -1,12 +1,18 @@
 
 # 解析-设计六大原则
 
+- 接口隔离原则：只依赖于自己需要的接口，可重用组件最小化依赖。
+- 单一功能原则：接口拆分粒度要细，降低不必要的耦合，增加灵活性。
+- 依赖反转原则:  不直接依赖于实现，而是根据APP需要的抽象接口，选择模块实现对应的抽象接口。
+- 松散耦合：接口与具体实现隔离，可灵活扩展，替换，不会影响到原来的调用代码。
+- 即时重构:  计划永远赶不上变化，没人能完全预测哪一部分可能变化，哪一部分不会变化。为此对不确定的部分，可以先搁置保留以后轻易重构的可能性，等真的需要时即时重构。由此减轻过度设计造成的效率下降。
 
 ### 推荐阅读：
 
 * [面向对象设计的六大设计原则（附 Demo & UML类图） - 掘金](https://juejin.im/post/5b9526c1e51d450e69731dc2)
 * [创建型模式 — Graphic Design Patterns](https://design-patterns.readthedocs.io/zh_CN/latest/creational_patterns/creational.html)
 
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20200402104923.png)
 
 ## 原则一：开闭原则（Open Close Principle）
 
