feat(DesignPattern): add Builder Pattern

--- a/设计模式/解析-设计模式.md
+++ b/设计模式/解析-设计模式.md
@@ -372,6 +372,45 @@ int objc_sync_exit(id obj)
 }
 ```
 
+### 建造者模式（Builder）
+
+[一篇文章就彻底弄懂建造者模式(Builder Pattern)](https://www.jianshu.com/p/3d1c9ffb0a28)
+
+创建者模式又叫建造者模式，是将一个复杂的对象的构建与它的表示分离，使
+得同样的构建过程可以创建不同的表示。创建者模式隐藏了复杂对象的创建过程，它把复杂对象的创建过程加以抽象，通过子类继承或者重载的方式，动态的创建具有复合属性的对象。
+
+
+* 适用场景：
+隔离复杂对象的创建和使用，相同的方法，不同执行顺序，产生不同事件结果
+多个部件都可以装配到一个对象中，但产生的运行结果不相同
+产品类非常复杂或者产品类因为调用顺序不同而产生不同作用
+初始化一个对象时，参数过多，或者很多参数具有默认值
+Builder模式不适合创建差异性很大的产品类
+产品内部变化复杂，会导致需要定义很多具体建造者类实现变化，增加项目中类的数量，增加系统的理解难度和运行成本
+需要生成的产品对象有复杂的内部结构，这些产品对象具备共性；
+
+* 主要作用
+在用户不知道对象的建造过程和细节的情况下就可以直接创建复杂的对象。
+
+用户只需要给出指定复杂对象的类型和内容；
+建造者模式负责按顺序创建复杂对象（把内部的建造过程和细节隐藏起来)
+1.4 解决的问题
+方便用户创建复杂的对象（不需要知道实现过程）
+代码复用性 & 封装性（将对象构建过程和细节进行封装 & 复用）
+例子：造汽车 & 买汽车。
+
+工厂（建造者模式）：负责制造汽车（组装过>程和细节在工厂内）
+汽车购买者（用户）：你只需要说出你需要的>型号（对象的类型和内容），然后直接购买就可>>以使用了
+（不需要知道汽车是怎么组装的（车轮、车门、>发动机、方向盘等等））
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20200520115402.png)
+
+- 指挥者（Director）直接和客户（Client）进行需求沟通；
+- 沟通后指挥者将客户创建产品的需求划分为各个部件的建造请求（Builder）；
+- 将各个部件的建造请求委派到具体的建造者（ConcreteBuilder）；
+- 各个具体建造者负责进行产品部件的构建；
+- 最终构建成具体产品（Product）。
+
 
 ## 结构型模式
 
