feat: add 设计模式 UML, 更新设计模式思考🤔

--- a/设计模式/解析-设计六大原则.md
+++ b/设计模式/解析-设计六大原则.md
@@ -34,6 +34,10 @@ Software entities (classes, modules, functions, etc.) should be open for extensi
 代码讲解
 
 
+### 思考
+* 针对于软件在不断迭代发版过程中，需要保证交互稳定性，同时满足自身的业务和维护的实现
+* 降低修改带来的成本和风险
+
 ## 原则二：单一职责原则（Single Responsibility Principle）
 
 ### 定义
@@ -76,6 +80,9 @@ Software entities (classes, modules, functions, etc.) should be open for extensi
 
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20200223120930.png)
 
+### 思考
+* 抽象的程度，抽象的粒度，取决于经验
+
 ## 原则四：接口分离原则（Interface Segregation Principle）
 
 ### 定义
@@ -113,6 +120,10 @@ Software entities (classes, modules, functions, etc.) should be open for extensi
 
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20200223121519.png)
 
+### 思考
+
+* 耦合性
+
 ## 原则六：里氏替换原则（Liskov Substitution Principle）
 
 ### 定义
@@ -122,7 +133,7 @@ Software entities (classes, modules, functions, etc.) should be open for extensi
 
 ### 定义的解读
 
-在继承体系中，子类中可以增加自己特有的方法，也可以实现父类的抽象方法，但是不能重写父类的非抽象方法，否则该继承关系就不是一个正确的继承关系。
+在继承体系中，子类中可以增加自己特有的方法，也可以实现父类的抽象方法，但是不能重写父类的**非抽象方法（实例方法）**，否则该继承关系就不是一个正确的继承关系。
 
 ### 优点
 
