feat(多线程): 🔖 update 解析多线程

--- a/1-iOSCocoa💎/多线程/解析-多线程.md
+++ b/1-iOSCocoa💎/多线程/解析-多线程.md
@@ -357,14 +357,14 @@ NSLog(@"3"); // 任务3
 ```
  1
 ```
- 
+
 分析：
 
 * dispatch_sync表示是一个同步线程；
 * dispatch_get_main_queue表示运行在主线程中的主队列；
 * 任务2是同步线程的任务。
-* 首先执行任务1，这是肯定没问题的，只是接下来，程序遇到了同步线程，**那么它会进入等待，等待任务2执行完，然后执行任务3。但这是队列，有任务来，当然会将任务加到队尾，然后遵循FIFO原则执行任务。那么，现在任务2就会被加到最后，任务3排在了任务2前面**，问题来了：
-
+* 首先执行任务1，这是肯定没问题的，只是接下来，程序遇到了同步线程，那么它会进入等待，等待任务2执行完，然后执行任务3。**但这是队列，有任务来，当然会将任务加到队尾，然后遵循FIFO原则执行任务。那么，现在任务2就会被加到最后，任务3排在了任务2前面**，问题来了：
+但3需要等同步线程的2先执行, 2和3互相等待，造成死锁
 ![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190203140721.png)
 
 ### 案例二
@@ -381,10 +381,10 @@ NSLog(@"3"); // 任务3
 
 ```
 1
-2 
+2
 3
 ```
- 
+
 分析：
 
 首先执行任务1，接下来会遇到一个同步线程，程序会进入等待。等待任务2执行完成以后，才能继续执行任务3。从dispatch_get_global_queue可以看出，任务2被加入到了全局的并行队列中，当并行队列执行完任务2以后，返回到主队列，继续执行任务3。
@@ -1002,6 +1002,96 @@ KCMainViewController.m
 
 运行效果与前面使用同步锁是一样的。
 
+
+
+## 结论
+
+使用sync函数往当前串行队列中添加任务，会卡住当前的串行队列（产生死锁）
+
+首先你要理解同步和异步执行的概念，同步和异步目的不是为了是否创建一个新的线程，同步会阻塞当前函数的返回，异步函数会立即返回执行下面的代码；队列是一种数据结构，队列有FIFO,LIFO等，控制任务的执行顺序，至于是否开辟一个新的线程，因为同步函数会等待函数的返回，所以在当前线程执行就行了，没必要浪费资源再开辟新的线程，如果是异步函数，当前线程需要立即函数返回，然后往下执行，所以函数里面的任务必须要开辟一个新的线程去执行这个任务。
+队列上是放任务的,而线程是去执行队列上的任务的
+
+【问题1】：以下代码是在主线程执行的，会不会产生死锁？会！
+
+```swift
+NSLog(@"执行任务1");
+dispatch_queue_t queue = dispatch_get_main_queue();
+dispatch_sync(queue, ^{
+NSLog(@"执行任务2");
+});
+
+NSLog(@"执行任务3");
+```
+
+dispatch_sync立马在当前线程同步执行任务
+分析：
+
+1、主线程中任务执行：任务1、sync、任务3、
+2、主队列：viewDidLoad、任务2、
+
+其中在主队列viewDidLoad里面的任务3执行结束才会执行任务2；而主线程中是执行完sync才会执行任务3。也就是任务2等待任务3执行，任务3再也等待任务2执行，造成死锁
+
+【问题2】：以下代码是在主线程执行的，会不会产生死锁？不会！
+```swift
+- (void)interview02
+{
+
+NSLog(@"执行任务1");
+
+dispatch_async(queue, ^{
+NSLog(@"执行任务2");
+dispatch_queue_t queue = dispatch_get_main_queue();
+});
+
+NSLog(@"执行任务3");
+
+// dispatch_async不要求立马在当前线程同步执行任务
+}
+```
+因为dispatch_async不要求立马在当前线程同步执行任务，不会造成线程死锁
+【问题3】：以下代码是在主线程执行的，会不会产生死锁？会！
+
+```swift
+NSLog(@"执行任务1");
+
+dispatch_queue_t queue = dispatch_queue_create("myqueu", DISPATCH_QUEUE_SERIAL);
+dispatch_async(queue, ^{ // 0
+NSLog(@"执行任务2");
+
+dispatch_sync(queue, ^{ // 1
+NSLog(@"执行任务3");
+});
+
+NSLog(@"执行任务4");
+});
+
+NSLog(@"执行任务5");
+```
+
+其中执行任务3和执行任务4之间造成死锁
+【问题4】：以下代码是在主线程执行的，会不会产生死锁？不会！
+
+```swift
+- (void)interview04
+{
+
+NSLog(@"执行任务1");
+
+dispatch_queue_t queue = dispatch_queue_create("myqueu", DISPATCH_QUEUE_CONCURRENT);
+
+dispatch_async(queue, ^{ // 0
+NSLog(@"执行任务2");
+
+dispatch_sync(queue, ^{ // 1
+NSLog(@"执行任务3");
+});
+
+NSLog(@"执行任务4");
+});
+
+NSLog(@"执行任务5");
+}
+```
 
 
 ## 扩展--iOS机型运行内存
